--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-twitter-widgets": "^1.10.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
